# ddp-inspector

./: .gitignore  README.md  requirements.txt  test.py
.github/workflows/: tests.yml
ddpinspect/: LICENSE  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
ddpinspect/src/ddpinspect/: facebook.py  instagram.py  scanfiles.py  tiktok.py  twitter.py  unzipddp.py  validate.py  youtube.py
ddpinspect/src/parserlib/: stringparse.py  urldetectionregex.py
ddpinspect/src/scanddp/: instagram.py  my_exceptions.py  scanfiles.py  scanfolder.py  scanjson.py  twitter.py  unzipddp.py
ddpinspect/tests/: test_instagram.py  test_stringparse.py  test_test.py  test_twitter.py  test_unzipddp.py  test_youtube.py
ddpinspect/tests/data/: personalization.js_2022_09-20
ddpinspect/tests/data/instagram/: ads_interests.json_2022_09_22  your_topics.json_2022_09_22
ddpinspect/tests/data/youtube/: subscriptions.csv_2022_09_22  watch-history.json_2022_09_22
examineddp/parserlib/: stringparse.py  urldetectionregex.py
examineddp/scanddp/: scanfolder.py  scanjson.py  twitter.py  unzipddp.py
scripts/: README.md  resursiveunzip.py
src/parserlib/: stringparse.py
src/scanddp/: scanfolder.py
