[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pylint.BASIC]
good-names = ["b", "i", "f", "d", "fp", "e", "df", "p", "k", "v", "zi", "zf"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0301", "R0801", "W0150", "W0703", "R0902"] 



