[metadata]
name = ddpinspect
description = A package to process the contents of Data Download Packages
author = Niek de Schipper
license = GNU Affero General Public License v3.0
license_files = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    parserlib
    scanddp
install_requires =
    et-xmlfile>=1.1.0
    numpy>=1.23.2
    pandas>=1.4.3
    python-dateutil>=2.8.2
    python-magic>=0.4.27
    pytz>==2022.2.1
    six>=1.16.0
python_requires = >=3.9
package_dir =
    =src

#[options.extras_require]
#testing =
#    pytest>=6.0
#    pytest-cov>=2.0
#    mypy>=0.910
#    flake8>=3.9
#    tox>=3.24
#
#[options.package_data]
#slapping = py.typed
#
#[flake8]
#max-line-length = 160
