[metadata]
name = ddpinspect
description = A package to process the contents of Data Download Packages
author = Niek de Schipper
license = GNU Affero General Public License v3.0
license_files = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    parserlib
    scanddp
install_requires =
    pandas>=1.4.3
    python-magic>=0.4.27
python_requires = >=3.9
package_dir =
    =src

#[options.extras_require]
#testing =
#    pytest>=6.0
#    pytest-cov>=2.0
#    mypy>=0.910
#    flake8>=3.9
#    tox>=3.24
#
#[options.package_data]
#slapping = py.typed

[flake8]
max-line-length = 160
per-file-ignores =
    # line too long
    src/parserlib/urldetectionregex.py: E501
